feat Auth-history endpoint added
